--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,4 @@
-[tool.pytest.ini_options]
-pythonpath = [
-  ".", "src",
-]
-asyncio_mode="auto"
+[tool.black]
+line-length = 79
+skip-string-normalization = true
+verbose = true
